--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "cheerio": "^1.0.0-rc.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "dotenv": "^6.1.0",
     "express": "~4.16.0",
+    "express-handlebars": "^3.0.0",
+    "firebase": "^5.5.8",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "web-push": "^3.3.3"
   }
 }
