Add telegram webhook url for test

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
     "request": "^2.88.0",
+    "telegraf": "^3.25.0",
     "web-push": "^3.3.3"
   }
 }
